Updated scripts, added policy