@@ -1,2 +1,8 @@
 #!/bin/bash
-java -cp "out/production/Main_Coursework" Clock $*
+./StartRMI.sh
+java -cp "out/production/Main_Coursework" \
+	-Djava.security.manager \
+	-Djava.security.policy=server.policy \
+	-Djava.rmi.codebase=file:/Users/huw/Documents/University/COMP2207/Main_Coursework/out/production/Main_Coursework/ \
+	-Djava.rmi.server.codebase=file:/Users/huw/Documents/University/COMP2207/Main_Coursework/out/production/Main_Coursework/ \
+	Clock $*
